--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,13 +1,15 @@
 {% extends 'blog/base.html' %}
 
 {% block content %}
-    {% for post in posts %}
-        <article class="post">
-            <time class="date">
-                {{ post.published_date }}
-            </time>
-            <h2><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h2>
-            <p>{{ post.text|linebreaksbr }}</p>
-        </article>
-    {% endfor %}
+  {% for post in posts %}
+    <article class="mb-4">
+      <time>Published: {{ post.published_date }}</time>
+      <h2>
+        <a href="{% url 'post_detail' pk=post.pk %}">
+          {{ post.title }}
+        </a>
+      </h2>
+      <p>{{ post.text|linebreaksbr }}</p>
+    </article>
+  {% endfor %}
 {% endblock %}
