--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,25 +1,40 @@
 {% load static %}
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Django Girls blog</title>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext">
-        <link rel="stylesheet" href="{% static 'css/blog.css' %}">
-    </head>
-    <body>
+  <head>
+    <meta charset="utf-8">
+    <title>Django Girls Blog</title>
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+    <!-- Google Fonts -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext">
+
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+  </head>
+
+  <body>
     <header class="page-header">
-      <div class="container">
-          <h1><a href="/">Django Girls Blog</a></h1>
+      <div class="container d-flex justify-content-between align-items-center">
+        <h1 class="mb-0">
+          <a href="/" class="text-white text-decoration-none" style="font-family: 'Lobster', cursive;">
+            Django Girls Blog
+          </a>
+        </h1>
+
+        {% if user.is_authenticated %}
+          <a href="{% url 'post_new' %}" class="top-menu">
+            <img src="{% static 'blog/icons/file-earmark-plus.svg' %}" alt="New Post" height="24">
+          </a>
+        {% endif %}
       </div>
     </header>
-    <main class="container">
-        <div class="row">
-            <div class="col">
-            {% block content %}
-            {% endblock %}
-            </div>
-        </div>
+
+    <main class="container mt-4">
+      {% block content %}
+      {% endblock %}
     </main>
-</body>
+  </body>
 </html>
