--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,13 +1,15 @@
 {% extends 'blog/base.html' %}
 
 {% block content %}
-    <article class="post">
-        {% if post.published_date %}
-            <time class="date">
-                {{ post.published_date }}
-            </time>
-        {% endif %}
-        <h2>{{ post.title }}</h2>
-        <p>{{ post.text|linebreaksbr }}</p>
-    </article>
+  <article>
+    <h2>{{ post.title }}</h2>
+    <p>{{ post.text|linebreaksbr }}</p>
+    <p><small>Published: {{ post.published_date }}</small></p>
+
+    {% if user.is_authenticated %}
+      <a href="{% url 'post_edit' pk=post.pk %}" class="btn btn-secondary mt-3">
+        Edit Post
+      </a>
+    {% endif %}
+  </article>
 {% endblock %}
